bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct NAMDsp_t {
    _unused: [u8; 0],
}
pub type nam_dsp_handle_t = *mut NAMDsp_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct NAMDspData_t {
    _unused: [u8; 0],
}
pub type nam_dsp_data_handle_t = *mut NAMDspData_t;
pub const nam_error_t_NAM_SUCCESS: nam_error_t = 0;
pub const nam_error_t_NAM_ERROR_FILE_NOT_FOUND: nam_error_t = -1;
pub const nam_error_t_NAM_ERROR_INVALID_VERSION: nam_error_t = -2;
pub const nam_error_t_NAM_ERROR_CORRUPTED_MODEL: nam_error_t = -3;
pub const nam_error_t_NAM_ERROR_INVALID_ARCHITECTURE: nam_error_t = -4;
pub const nam_error_t_NAM_ERROR_MEMORY: nam_error_t = -5;
pub const nam_error_t_NAM_ERROR_UNKNOWN: nam_error_t = -99;
pub type nam_error_t = ::std::os::raw::c_int;
extern "C" {
    pub fn nam_create_dsp_data() -> nam_dsp_data_handle_t;
}
extern "C" {
    pub fn nam_destroy_dsp_data(handle: nam_dsp_data_handle_t);
}
extern "C" {
    pub fn nam_get_dsp_from_file(
        config_filename: *const ::std::os::raw::c_char,
        error: *mut nam_error_t,
    ) -> nam_dsp_handle_t;
}
extern "C" {
    pub fn nam_get_dsp_from_file_with_config(
        config_filename: *const ::std::os::raw::c_char,
        config: nam_dsp_data_handle_t,
        error: *mut nam_error_t,
    ) -> nam_dsp_handle_t;
}
extern "C" {
    pub fn nam_get_dsp_from_config(
        config: nam_dsp_data_handle_t,
        error: *mut nam_error_t,
    ) -> nam_dsp_handle_t;
}
extern "C" {
    pub fn nam_destroy_dsp(handle: nam_dsp_handle_t);
}
extern "C" {
    pub fn nam_dsp_prewarm(handle: nam_dsp_handle_t);
}
extern "C" {
    pub fn nam_dsp_set_loudness(handle: nam_dsp_handle_t, value: f64);
}
extern "C" {
    pub fn nam_dsp_set_input_level(handle: nam_dsp_handle_t, value: f64);
}
extern "C" {
    pub fn nam_dsp_set_output_level(handle: nam_dsp_handle_t, value: f64);
}
